# American_car_price_calculator

./: .gitignore
web/: Dockerfile  app.py  docker-compose.yml  example.env  main.py  pyproject.toml
web/assets/style/: main.css  main_with_codepen.css
web/callbacks/: __init__.py  change_menu_page.py  hyperparametrs.py  login_form.py  model_calc.py  model_triain.py  open_login_form.py  upload_file.py
web/core/: settings.py
web/data/: car_prices_example.csv
web/page_elements/: main_page.py
web/page_elements/content/: content.py  model_type.py  table.py
web/page_elements/form/: input.py  login_modal_form.py
web/page_elements/side_menu/: buttons.py  menu.py
web/pages/: calc_price.py  model_trained_data.py  train_page.py
web/services/: Authorize.py  data.py  file.py  server.py
