[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["00XAH00 <pxaxulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.8.1"
pandas = "^1.5.3"
dash-bootstrap-components = "^1.4.0"
dash-extensions = "^0.1.13"
dash-mantine-components = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
